--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <use href="./img/symbol-defs.svg#icon-airplane"></use>
             </svg>
           </div>
-          <p>Lorem, ipsumt amet consectetur adipisicing elit. Expedita</p>
+          <p>Lorem, ipsumt . Expedita</p>
         </li>
         <li>
           <div class="hole"></div>
@@ -79,13 +79,13 @@
       </div>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, odit
-        qui incidunt ipsum repudiandae, unde at illum esse placeat aliquid error
-        beatae, veritatis cumque porro dicta quibusdam consequuntur? Velit quas,
-        sit delectus voluptate expedita provident, error aliquam, est reiciendis
-        perspiciatis veritatis eveniet! Assumenda possimus provident, numquam
-        praesentium voluptatum ex ducimus harum, vero asperiores perferendis
-        exercitationem. Sunt distinctio repudiandae voluptatem nobis.
+        Lorem ipsum dolor sit . Inventore, odit qui incidunt ipsum repudiandae,
+        unde at illum esse placeat aliquid error beatae, veritatis cumque porro
+        dicta quibusdam consequuntur? Velit quas, sit delectus voluptate
+        expedita provident, error aliquam, est reiciendis perspiciatis veritatis
+        eveniet! Assumenda possimus provident, numquam praesentium voluptatum ex
+        ducimus harum, vero asperiores perferendis exercitationem. Sunt
+        distinctio repudiandae voluptatem nobis.
       </p>
       <button class="learn__more__btn" type="button" data-modal-open>
         LEARN MORE
@@ -94,11 +94,10 @@
     <section class="destinations">
       <h2>Destinations to Inspire Adventure</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-        dignissimos autem voluptatum repellendus magnam nulla voluptate iure at
-        laboriosam velit reiciendis quibusdam, sapiente cupiditate error
-        tenetur. Modi itaque ipsum impedit et dolorem sed! Adipisci voluptatibus
-        culpa nobis fugiat! Sed, mollitia.
+        Lorem ipsum dolor sit . Beatae dignissimos autem voluptatum repellendus
+        magnam nulla voluptate iure at laboriosam velit reiciendis quibusdam,
+        sapiente cupiditate error tenetur. Modi itaque ipsum impedit et dolorem
+        sed! Adipisci voluptatibus culpa nobis fugiat! Sed, mollitia.
       </p>
       <ul class="destinations__cards">
         <li>
@@ -106,9 +105,8 @@
           <div>
             <h3>Kuala Lumpur</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet
-              aliquam error est impedit tempora neque provident consequuntur rem
-              deserunt hic!
+              Lorem ipsum, dolor sit . Amet aliquam error est impedit tempora
+              neque provident consequuntur rem deserunt hic!
             </p>
           </div>
           <button class="more" type="button">more</button>
@@ -118,9 +116,8 @@
           <div>
             <h3>New Caledonia</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-              adipisci incidunt ipsam excepturi maiores nemo tempore modi
-              placeat voluptatibus officiis.
+              Lorem ipsum dolor sit . Explicabo adipisci incidunt ipsam
+              excepturi maiores nemo tempore modi placeat voluptatibus officiis.
             </p>
           </div>
           <button class="more" type="button">more</button>
@@ -130,9 +127,8 @@
           <div>
             <h3>BALI</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
-              ex quaerat velit maxime, laudantium recusandae ratione quas
-              voluptatum unde. Optio.
+              Lorem ipsum dolor, sit . Deserunt ex quaerat velit maxime,
+              laudantium recusandae ratione quas voluptatum unde. Optio.
             </p>
           </div>
           <button class="more" type="button">more</button>
@@ -142,9 +138,8 @@
           <div>
             <h3>Indonesia</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-              error labore voluptatum praesentium, quo unde nam esse et iusto
-              rerum!
+              Lorem ipsum dolor sit . Quibusdam error labore voluptatum
+              praesentium, quo unde nam esse et iusto rerum!
             </p>
           </div>
           <button class="more" type="button">more</button>
@@ -157,6 +152,85 @@
         Lorem ipsum dolor. Maiores, repellendus consectetur! Voluptatibus
         incidunt, sunt possimus sint!
       </p>
+    </section>
+    <section class="best">
+      <h2>We are the best travel agency to improve your deals</h2>
+      <p>We work directly for our clients and put client’s interests first.</p>
+      <ul class="best__box">
+        <li>
+          <p>50%</p>
+          <p>Lorem ipsum dolor si . Totam, facere!</p>
+        </li>
+        <li>
+          <p>16%</p>
+          <p>Lorem ipsum dolor sit. Totam, facere!</p>
+        </li>
+        <li>
+          <p>20%</p>
+          <p>Lorem ipsum dolor sit. Totam, facere!</p>
+        </li>
+        <li>
+          <p>13%</p>
+          <p>Lorem ipsum dolor sit. Totam, facere!</p>
+        </li>
+      </ul>
+    </section>
+    <section class="mountains">
+      <ul class="mon__img__box">
+        <li>
+          <div class="moun__box">
+            <p>Hiking, kayaking, biking</p>
+            <p>
+              Sample text. Click to select the text box. Click again or double
+              click to start editing the text.
+            </p>
+          </div>
+        </li>
+        <li>
+          <div class="moun__box">
+            <p>Natural Habitat Adventures</p>
+            <p>
+              Sample text. Click to select the text box. Click again or double
+              click to start editing the text.
+            </p>
+          </div>
+        </li>
+      </ul>
+      <div>
+        <p>
+          Nature travel offers the thrill of discovering something new, or at
+          the very least, something only a fraction of people have seen in
+          person.
+        </p>
+        <p>
+          Mus mauris vitae ultricies leo. Lobortis mattis aliquam faucibus purus
+          in massa. Id aliquet risus feugiat in.
+        </p>
+        <p>
+          Vehicula ipsum a arcu cursus vitae congue mauris. Ut enim blandit
+          volutpat maecenas volutpat blandit.
+        </p>
+        <div>
+          <button class="learn__more__btn" type="button" data-modal-open>
+            learn more
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="about__agency">
+      <div>
+        <div class="a__overlay">
+          <h2>About Agency</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+            sapiente doloribus ut dicta. Asperiores, aut est soluta, id sapiente
+            aperiam obcaecati accusamus perferendis architecto maiores tenetur
+            esse rerum modi illo quas magnam aliquam exercitationem cum a saepe
+            magni. Fugiat nulla omnis iure ad eum natus suscipit asperiores sint
+            ipsum atque?
+          </p>
+        </div>
+      </div>
     </section>
     <!--------------modal----------------->
     <div class="learn__more__modal is-hidden" data-modal>
