--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="./img/ico.png" />
   </head>
   <body>
+    <audio id="ok" src="./audio/ok.mp3"></audio>
+    <audio id="esc" src="./audio/esc.mp3"></audio>
     <header>
       <h1>Traveling Is A Unique Life Experience</h1>
     </header>
@@ -29,138 +31,6 @@
           LEARN MORE
         </button>
       </div>
-    </section>
-
-    <section>
-      <ul class="go">
-        <li>
-          <div class="hole"></div>
-          <div class="circle">
-            <svg>
-              <use href="./img/symbol-defs.svg#icon-airplane"></use>
-            </svg>
-          </div>
-          <p>Lorem, ipsumt inventore. Expedita cumque magnam</p>
-        </li>
-        <li>
-          <div class="hole"></div>
-          <div class="circle">
-            <svg>
-              <use href="./img/symbol-defs.svg#icon-luggage"></use>
-            </svg>
-          </div>
-          <p>voluptatibus, ea debitis inventore sequi cumque magnam. In</p>
-        </li>
-        <li>
-          <div class="hole"></div>
-          <div class="circle">
-            <svg>
-              <use href="./img/symbol-defs.svg#icon-local"></use>
-            </svg>
-          </div>
-          <p>quibusdam aliquam porro fugit asperiores culpa inventore</p>
-        </li>
-        <li>
-          <div class="hole"></div>
-          <div class="circle">
-            <svg>
-              <use href="./img/symbol-defs.svg#icon-suitcase"></use>
-            </svg>
-          </div>
-          <p>
-            aliquid eum libero repellat recusandae explicabo, nam reprehenderit
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="project_experience">
-      <h2>PROJECT EXPERIENCE</h2>
-      <div class="image__block">
-        <img src="./img/m1.jpg" alt="img" /><img
-          src="./img/m2.jpg"
-          alt="img"
-        /><img src="./img/m3.jpg" alt="img" />
-      </div>
-
-      <p>
-        Lorem ipsum dolor sit . Inventore, odit qui incidunt ipsum repudiandae,
-        unde at illum esse placeat aliquid error beatae, veritatis cumque porro
-        dicta quibusdam consequuntur? Velit quas, sit delectus voluptate
-        expedita provident, error aliquam, est reiciendis perspiciatis veritatis
-        eveniet! Assumenda possimus provident, numquam praesentium voluptatum ex
-        ducimus harum, vero asperiores perferendis exercitationem. Sunt
-        distinctio repudiandae voluptatem nobis.
-      </p>
-      <button
-        id="learn_more"
-        class="learn__more__btn"
-        type="button"
-        data-modal-open
-      >
-        LEARN MORE
-      </button>
-    </section>
-    <section class="destinations">
-      <h2>Destinations to Inspire Adventure</h2>
-      <p>
-        Lorem ipsum dolor sit . Beatae dignissimos autem voluptatum repellendus
-        magnam nulla voluptate iure at laboriosam velit reiciendis quibusdam,
-        sapiente cupiditate error tenetur. Modi itaque ipsum impedit et dolorem
-        sed! Adipisci voluptatibus culpa nobis fugiat! Sed, mollitia.
-      </p>
-      <ul class="destinations__cards">
-        <li>
-          <img src="./img/d1.jpg" alt="img" />
-          <div>
-            <h3>Asia</h3>
-            <p>
-              Lorem ipsum, dolor sit . Amet aliquam error est impedit tempora
-              neque provident consequuntur rem deserunt hic!
-            </p>
-          </div>
-          <button class="more" type="button">more</button>
-        </li>
-        <li>
-          <img src="./img/d2.jpg" alt="img" />
-          <div>
-            <h3>Europe</h3>
-            <p>
-              Lorem ipsum dolor sit . Explicabo adipisci incidunt ipsam
-              excepturi maiores nemo tempore modi placeat voluptatibus officiis.
-            </p>
-          </div>
-          <button class="more" type="button">more</button>
-        </li>
-        <li>
-          <img src="./img/d3.jpg" alt="img" />
-          <div>
-            <h3>Australia</h3>
-            <p>
-              Lorem ipsum dolor, sit . Deserunt ex quaerat velit maxime,
-              laudantium recusandae ratione quas voluptatum unde. Optio.
-            </p>
-          </div>
-          <button class="more" type="button">more</button>
-        </li>
-        <li>
-          <img src="./img/d4.jpg" alt="img" />
-          <div>
-            <h3>Indonesia</h3>
-            <p>
-              Lorem ipsum dolor sit . Quibusdam error labore voluptatum
-              praesentium, quo unde nam esse et iusto rerum!
-            </p>
-          </div>
-          <button class="more" type="button">more</button>
-        </li>
-      </ul>
-    </section>
-    <section class="ocean">
-      <h2 id="text__move">The Air Smells Ocean</h2>
-      <p id="text__move">
-        Lorem ipsum dolor. Maiores, repellendus consectetur! Voluptatibus
-        incidunt, sunt possimus sint!
-      </p>
     </section>
     <section class="best">
       <h2>We are the best travel agency to improve your deals</h2>
@@ -231,6 +101,76 @@
         </div>
       </div>
     </section>
+    <section>
+      <ul class="go">
+        <li>
+          <div class="hole"></div>
+          <div class="circle">
+            <svg>
+              <use href="./img/symbol-defs.svg#icon-airplane"></use>
+            </svg>
+          </div>
+          <p>Lorem, ipsumt inventore. Expedita cumque magnam</p>
+        </li>
+        <li>
+          <div class="hole"></div>
+          <div class="circle">
+            <svg>
+              <use href="./img/symbol-defs.svg#icon-luggage"></use>
+            </svg>
+          </div>
+          <p>voluptatibus, ea debitis inventore sequi cumque magnam. In</p>
+        </li>
+        <li>
+          <div class="hole"></div>
+          <div class="circle">
+            <svg>
+              <use href="./img/symbol-defs.svg#icon-local"></use>
+            </svg>
+          </div>
+          <p>quibusdam aliquam porro fugit asperiores culpa inventore</p>
+        </li>
+        <li>
+          <div class="hole"></div>
+          <div class="circle">
+            <svg>
+              <use href="./img/symbol-defs.svg#icon-suitcase"></use>
+            </svg>
+          </div>
+          <p>
+            aliquid eum libero repellat recusandae explicabo, nam reprehenderit
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="project_experience">
+      <h2>PROJECT EXPERIENCE</h2>
+      <div class="image__block">
+        <img src="./img/m1.jpg" alt="img" /><img
+          src="./img/m2.jpg"
+          alt="img"
+        /><img src="./img/m3.jpg" alt="img" />
+      </div>
+
+      <p>
+        Lorem ipsum dolor sit . Inventore, odit qui incidunt ipsum repudiandae,
+        unde at illum esse placeat aliquid error beatae, veritatis cumque porro
+        dicta quibusdam consequuntur? Velit quas, sit delectus voluptate
+        expedita provident, error aliquam, est reiciendis perspiciatis veritatis
+        eveniet! Assumenda possimus provident, numquam praesentium voluptatum ex
+        ducimus harum, vero asperiores perferendis exercitationem. Sunt
+        distinctio repudiandae voluptatem nobis.
+      </p>
+      <button
+        id="learn_more"
+        class="learn__more__btn"
+        type="button"
+        data-modal-open
+      >
+        LEARN MORE
+      </button>
+    </section>
     <section class="about__agency">
       <div>
         <div class="a__overlay">
@@ -246,36 +186,135 @@
         </div>
       </div>
     </section>
+    <section class="ocean">
+      <h2 id="text__move">The Air Smells Ocean</h2>
+      <p id="text__move">
+        Lorem ipsum dolor. Maiores, repellendus consectetur! Voluptatibus
+        incidunt, sunt possimus sint!
+      </p>
+    </section>
+    <section class="destinations">
+      <h2>Destinations to Inspire Adventure</h2>
+      <p>
+        Lorem ipsum dolor sit . Beatae dignissimos autem voluptatum repellendus
+        magnam nulla voluptate iure at laboriosam velit reiciendis quibusdam,
+        sapiente cupiditate error tenetur. Modi itaque ipsum impedit et dolorem
+        sed! Adipisci voluptatibus culpa nobis fugiat! Sed, mollitia.
+      </p>
+      <ul class="destinations__cards">
+        <li id="d1">
+          <img src="./img/d1.jpg" alt="img" />
+          <div>
+            <h3>Asia</h3>
+            <p>
+              Lorem ipsum, dolor sit . Amet aliquam error est impedit tempora
+              neque provident consequuntur rem deserunt hic!
+            </p>
+          </div>
+          <button id="asia1" class="more" type="button">choose place</button>
+          <img id="ok" src="./img/ok.png" alt="ok" />
+        </li>
+        <li id="d2">
+          <img src="./img/d2.jpg" alt="img" />
+          <div>
+            <h3>Europe</h3>
+            <p>
+              Lorem ipsum dolor sit . Explicabo adipisci incidunt ipsam
+              excepturi maiores nemo tempore modi placeat voluptatibus officiis.
+            </p>
+          </div>
+          <button id="europe2" class="more" type="button">choose place</button>
+          <img id="ok" src="./img/ok.png" alt="ok" />
+        </li>
+        <li id="d3">
+          <img src="./img/d3.jpg" alt="img" />
+          <div>
+            <h3>Australia</h3>
+            <p>
+              Lorem ipsum dolor, sit . Deserunt ex quaerat velit maxime,
+              laudantium recusandae ratione quas voluptatum unde. Optio.
+            </p>
+          </div>
+          <button id="australia3" class="more" type="button">
+            choose place
+          </button>
+          <img id="ok" src="./img/ok.png" alt="ok" />
+        </li>
+        <li id="d4">
+          <img src="./img/d4.jpg" alt="img" />
+          <div>
+            <h3>Indonesia</h3>
+            <p>
+              Lorem ipsum dolor sit . Quibusdam error labore voluptatum
+              praesentium, quo unde nam esse et iusto rerum!
+            </p>
+          </div>
+          <button id="indonesia4" class="more" type="button">
+            choose place
+          </button>
+          <img id="ok" src="./img/ok.png" alt="ok" />
+        </li>
+      </ul>
+    </section>
+
     <section class="where">
       <h2>Where you want ?</h2>
       <ul class="where__box">
         <li>
-          <div class="w__overlay"></div>
+          <div id="w1" class="w__overlay"></div>
           <div>
             <h3></h3>
             <p></p>
           </div>
-          <button id="forest" type="button" data-modal-open>choose tour</button>
+          <button id="f" type="button" data-modal-open>
+            choose tour to forest
+          </button>
         </li>
         <li>
-          <div class="w__overlay"></div>
+          <div id="w2" class="w__overlay"></div>
           <div>
             <h3></h3>
             <p></p>
           </div>
-          <button id="sea" type="button" data-modal-open>choose tour</button>
+          <button id="s" type="button" data-modal-open>
+            choose tour to sea
+          </button>
         </li>
         <li>
-          <div class="w__overlay"></div>
+          <div id="w3" class="w__overlay"></div>
           <div>
             <h3></h3>
             <p></p>
           </div>
-          <button id="mountain" type="button" data-modal-open>
-            choose tour
+          <button id="m" type="button" data-modal-open>
+            choose tour to mountains
           </button>
         </li>
       </ul>
+    </section>
+
+    <section class="choice">
+      <div class="choice__box">
+        <p>you have chosen tours to:</p>
+        <div id="to"></div>
+        <p>we will select for you the best places</p>
+        <div id="to-way"></div>
+        <p>write your phone number and we will call you back</p>
+
+        <form id="form">
+          <label>
+            name
+            <input type="text" id="name" />
+          </label>
+          <label>
+            number
+            <input type="tel" id="tel" />
+          </label>
+          <button class="submit" id="submit" type="submit" data-modal-open>
+            submit
+          </button>
+        </form>
+      </div>
     </section>
     <!--------------modal----------------->
     <div class="backdrop is-hidden" data-modal-learn-more>
@@ -302,7 +341,7 @@
     <!---------------->
     <div class="backdrop is-hidden" data-modal-forest>
       <div class="f__box modal__box">
-        <button id="forest" class="x" type="button" data-modal-close>
+        <button id="f" class="x" type="button" data-modal-close>
           <svg class="svg__x">
             <use href="./img/symbol-defs.svg#icon-x"></use>
           </svg>
@@ -312,7 +351,7 @@
           <svg class="arrow" width="30" height="30">
             <use href="./img/symbol-defs.svg#icon-arrow"></use>
           </svg>
-          <button class="f__btn" type="button">
+          <button id="forest1" class="f__btn" type="button">
             <svg class="f__svg" width="30" height="30">
               <use href="./img/symbol-defs.svg#icon-forest"></use>
             </svg>
@@ -330,7 +369,7 @@
     <!--------------->
     <div class="backdrop is-hidden" data-modal-sea>
       <div class="s__box modal__box">
-        <button id="sea" class="x" type="button" data-modal-close>
+        <button id="s" class="x" type="button" data-modal-close>
           <svg class="svg__x">
             <use href="./img/symbol-defs.svg#icon-x"></use>
           </svg>
@@ -340,7 +379,7 @@
           <svg class="arrow" width="30" height="30">
             <use href="./img/symbol-defs.svg#icon-arrow"></use>
           </svg>
-          <button class="f__btn" type="button">
+          <button id="sea2" class="f__btn" type="button">
             <svg class="f__svg" width="30" height="30">
               <use href="./img/symbol-defs.svg#icon-sea"></use>
             </svg>
@@ -357,7 +396,7 @@
     <!-------------->
     <div class="backdrop is-hidden" data-modal-mountain>
       <div class="m__box modal__box">
-        <button id="mountain" class="x" type="button" data-modal-close>
+        <button id="m" class="x" type="button" data-modal-close>
           <svg class="svg__x">
             <use href="./img/symbol-defs.svg#icon-x"></use>
           </svg>
@@ -367,7 +406,7 @@
           <svg class="arrow" width="30" height="30">
             <use href="./img/symbol-defs.svg#icon-arrow"></use>
           </svg>
-          <button class="f__btn" type="button">
+          <button id="mountain3" class="f__btn" type="button">
             <svg class="f__svg" width="30" height="30">
               <use href="./img/symbol-defs.svg#icon-mountain"></use>
             </svg>
@@ -379,6 +418,17 @@
           molestiae omnis distinctio quisquam quae provident culpa unde eum
           iusto minus!
         </p>
+      </div>
+    </div>
+    <!----------->
+    <div class="backdrop is-hidden" data-modal-call>
+      <div class="call__bac modal__box">
+        <button id="submit" class="x" type="button" data-modal-close>
+          <svg class="svg__x">
+            <use href="./img/symbol-defs.svg#icon-x"></use>
+          </svg>
+        </button>
+        <div id="call__text"></div>
       </div>
     </div>
     <script src="./js/index.js" type="module"></script>
