--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
       </div>
     </section>
     <section class="ocean">
-      <h2 id="text__move">The Air Smells Ocean</h2>
-      <p id="text__move">
+      <h2>The Air Smells Ocean</h2>
+      <p>
         Lorem ipsum dolor. Maiores, repellendus consectetur! Voluptatibus
         incidunt, sunt possimus sint!
       </p>
